--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -24,7 +24,7 @@
                 android:layout_gravity="center_horizontal">
 
                 <ImageView
-                    android:id="@+id/coverImageView"
+                    android:id="@+id/characterImageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
