--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -2,6 +2,7 @@
      <!-- A CardView that contains a TextView -->
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,7 +30,7 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/orig_737410"/>
+                    card_view:srcCompat="@drawable/ram" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -62,16 +63,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:background="#333">
-            <TextView
-                android:id="@+id/statusTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                android:textSize="17dp"
-                android:textColor="#9e9e9e"
-                android:textStyle="bold"
-                android:text="Status: "
-                android:layout_gravity="left"/>
+                <TextView
+                    android:id="@+id/statusTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:textSize="17dp"
+                    android:textColor="#9e9e9e"
+                    android:textStyle="bold"
+                    android:text="Status: "
+                    android:layout_gravity="left"/>
 
                 <TextView
                     android:id="@+id/rstatusTextView"
