--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#333</color>
+    <color name="colorPrimaryDark">#202329</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorOrangeText">#ff9800</color>
 </resources>
