El titulo ya tiene el color que se ajustaba a la app
Queda por realizar:

2- Mostrar el resto de la informacion basica: Episodes
6- implementar las acciones del menu:
    6.1- Un filtro
    6.2- Un eliminar base de datos
    6.3- sincronizar
7- Mejorar el codigo

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,10 +21,13 @@
 
     <style name="AppTheme.ActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:actionOverflowButtonStyle">@style/Widget.ActionButton.Overflow</item>
+        <item name="android:textColorPrimary">@color/colorOrangeText</item>
     </style>
 
     <style name="Widget.ActionButton.Overflow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
         <item name="android:src">@mipmap/ic_orange_dots_tr</item>
     </style>
+
+
 
 </resources>
