El titulo ya tiene el color que se ajustaba a la app
Queda por realizar:

2- Mostrar el resto de la informacion basica: Episodes
6- implementar las acciones del menu:
    6.1- Un filtro
    6.3- sincronizar (Funciona pero se deberia tener encuenta algunas validaciones)
7- Mejorar el codigo

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,9 +8,9 @@
           android:background="@color/colorOrangeText"
           android:textColor="@color/colorOrangeText">
 
-    <item android:id="@+id/new_game"
+    <item android:id="@+id/sync_Pages"
         android:title="Sync Page"/>
-    <item android:id="@+id/help"
+    <item android:id="@+id/delete_DB"
         android:title="Delete DB" />
 
 
