Se arreglaron los textos y sus colores de los dialogos que muestran los episodios.
Queda por realizar:

6- implementar las acciones del menu:
    6.1- Un filtro
7- Mejorar el codigo

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
     <style name="MyDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
         <item name="android:windowBackground">@color/colorPrimaryDark</item>
         <item name="android:textColor">@color/colorOrangeText</item>
+        <item name="android:textColorPrimary">@color/colorOrangeText</item>
         <item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>
         <item name="colorAccent">@color/colorOrangeText</item>
     </style>
