--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -252,29 +252,18 @@
                 android:orientation="horizontal"
                 android:background="#333">
 
-            <TextView
-                android:id="@+id/episodeTextView"
+            <Button
+                android:id="@+id/episodeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:textSize="17dp"
                 android:textColor="#9e9e9e"
                 android:textStyle="bold"
-                android:text="Episode: "
+                android:text="Episode"
                 android:layout_gravity="start"
-                android:gravity="start"/>
-
-                <TextView
-                    android:id="@+id/repisodeTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="8dp"
-                    android:textSize="17dp"
-                    android:textColor="#ff9800"
-                    android:textStyle="bold"
-                    android:text=""
-                    android:layout_gravity="end"
-                    android:gravity="end"/>
+                android:gravity="center"
+                android:layout_marginLeft="10dp"/>
 
                 </LinearLayout>
 
